--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -2,30 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/ic_background_group"
+    android:id="@+id/constraintLayoutCalendar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.CalendarFragment"
-    android:id="@+id/constraintLayoutCalendar">
+    android:background="@drawable/ic_background_group"
+    tools:context=".fragments.CalendarFragment">
 
     <Button
         android:id="@+id/buttonSelectDate"
-        android:layout_width="310dp"
+        android:layout_width="295dp"
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/mandarin_border_12dp"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_select_date"
-        android:paddingStart="40dp"
+        android:paddingStart="25dp"
         android:paddingEnd="30dp"
         android:text="@string/select_date"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="20dp"
-        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -34,12 +36,11 @@
         android:layout_height="81dp"
         android:layout_marginStart="22dp"
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="10dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableStart="@drawable/ic_back_arrow"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonSelectDate"
-        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -71,10 +72,10 @@
         android:id="@+id/calendarView"
         android:layout_width="320dp"
         android:layout_height="360dp"
+        app:disabledDaysLabelsColor="@color/light_gray"
         app:forwardButtonSrc="@drawable/ic_forward_arrow"
         app:headerColor="@color/white"
         app:headerLabelColor="@color/rich_black"
-        app:disabledDaysLabelsColor="@color/light_gray"
         app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBorders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -92,11 +93,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/mandarin_border_12dp"
+        android:enabled="false"
         android:text="@string/confirm"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="17dp"
-        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
