--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -2,29 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_background_group"
     tools:context=".fragments.ConfirmationFragment">
 
     <Button
         android:id="@+id/buttonConfirmation"
-        android:layout_width="310dp"
+        android:layout_width="295dp"
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/mandarin_border_12dp"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_question"
-        android:paddingStart="40dp"
+        android:paddingStart="25dp"
         android:paddingEnd="30dp"
         android:text="@string/confirmation"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="20dp"
-        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -33,18 +35,17 @@
         android:layout_height="81dp"
         android:layout_marginStart="22dp"
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="10dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableStart="@drawable/ic_back_arrow"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonConfirmation"
-        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <View
-        android:id="@+id/viewCalendarBackground"
+        android:id="@+id/viewConfirmationBackground"
         android:layout_width="358dp"
         android:layout_height="480dp"
         android:layout_marginVertical="20dp"
@@ -64,9 +65,9 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/viewCalendarBackground"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBackground"
-        app:layout_constraintTop_toTopOf="@+id/viewCalendarBackground" />
+        app:layout_constraintEnd_toEndOf="@+id/viewConfirmationBackground"
+        app:layout_constraintStart_toStartOf="@+id/viewConfirmationBackground"
+        app:layout_constraintTop_toTopOf="@+id/viewConfirmationBackground" />
 
     <View
         android:id="@+id/viewBorders"
@@ -74,8 +75,8 @@
         android:layout_height="200dp"
         android:layout_margin="16dp"
         android:background="@drawable/white_border"
-        app:layout_constraintEnd_toEndOf="@+id/viewCalendarBackground"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBackground"
+        app:layout_constraintEnd_toEndOf="@+id/viewConfirmationBackground"
+        app:layout_constraintStart_toStartOf="@+id/viewConfirmationBackground"
         app:layout_constraintTop_toBottomOf="@+id/textViewHint" />
 
     <TextView
@@ -194,7 +195,7 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="17dp"
-        app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
+        app:layout_constraintBottom_toBottomOf="@+id/viewConfirmationBackground"
         app:layout_constraintEnd_toEndOf="@+id/viewBorders"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonCancel"
@@ -209,7 +210,7 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="17dp"
-        app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
+        app:layout_constraintBottom_toBottomOf="@+id/viewConfirmationBackground"
         app:layout_constraintEnd_toStartOf="@+id/buttonConfirmAppointment"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/viewBorders"
