--- a/app/src/main/res/layout/prescription_fragment.xml
+++ b/app/src/main/res/layout/prescription_fragment.xml
@@ -2,29 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_background_group"
     tools:context=".fragments.PrescriptionFragment">
 
     <Button
         android:id="@+id/buttonPastDiagnoses"
-        android:layout_width="310dp"
+        android:layout_width="295dp"
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/mandarin_border_12dp"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_prescription"
-        android:paddingStart="40dp"
+        android:paddingStart="25dp"
         android:paddingEnd="30dp"
         android:text="@string/prescription_header"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="20dp"
-        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -33,16 +35,14 @@
         android:layout_height="81dp"
         android:layout_marginStart="22dp"
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="10dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableStart="@drawable/ic_back_arrow"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonPastDiagnoses"
-        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
 
     <View
         android:id="@+id/LinearLayoutPrescription"
