--- a/app/src/main/res/anim/slide_in_right.xml
+++ b/app/src/main/res/anim/slide_in_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-	android:fromXDelta="-100%p" android:toXDelta="0%p"
-	android:duration="@android:integer/config_longAnimTime"
-	android:interpolator="@android:anim/overshoot_interpolator" />
-
-
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate
+        android:duration="200"
+        android:fromXDelta="100%"
+        android:toXDelta="0%" />
+</set>
