format duration date string
- format duration date string in prescription fragment
- add view animations in login activity

--- a/app/src/main/res/layout/medication_item.xml
+++ b/app/src/main/res/layout/medication_item.xml
@@ -58,6 +58,7 @@
         android:id="@+id/textViewDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:paddingHorizontal="14dp"
         android:text="@string/duration"
         android:textAlignment="center"
