--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -165,7 +165,12 @@
         android:id="@+id/navigation_mail"
         android:name="com.devsoncall.okdoc.fragments.MailFragment"
         android:label="mail_fragment"
-        tools:layout="@layout/mail_fragment" />
+        tools:layout="@layout/mail_fragment" >
+        <argument
+            android:name="type"
+            app:argType="String"
+            android:defaultValue="0" />
+    </fragment>
 
 
 </navigation>
