--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -168,7 +168,7 @@
         tools:layout="@layout/mail_fragment" >
         <argument
             android:name="type"
-            app:argType="String"
+            app:argType="string"
             android:defaultValue="0" />
     </fragment>
 
